# EnTiSe

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/PULL_REQUEST_TEMPLATE/: method_change.md
.github/workflows/: python-package.yml
.gitlab/merge_request_templates/: Method_Merge_Request.md
docs/: requirements.txt
docs/guides/: CI_CD_Guide.md  CONTRIBUTING.md  RELEASE_PROCEDURE.md  TEMPLATE_USAGE_GUIDE.md  guidelines.md
docs/img/: architecture.drawio  architecturedrawio.drawio  flowchart.drawio  workflow.drawio
docs/source/: architecture.rst  conf.py  copy_notebooks.py  examples.rst  generate_methods_docs.py  getting_started.rst  index.rst  installation.rst  workflow.rst
docs/source/_static/: tum-theme.css
docs/source/_templates/: method.rst
docs/source/api/: core.rst  (+3 more)
entise/: __init__.py
entise/constants/: __init__.py  columns.py  constants.py  general.py  objects.py  ts_types.py  units.py
entise/core/: base.py  base_auxiliary.py  generator.py  registry.py  runner.py  utils.py
entise/methods/: __init__.py  utils.py
entise/services/: weather.py
examples/: benchmark.py  utils.py
examples/dhw_jordanvajen/: objects.csv  runme.ipynb  runme.py
examples/dhw_probabilistic/: objects.csv  runme.ipynb  runme.py
examples/electricity_demandlib/: objects.csv  runme.ipynb  runme.py
examples/electricity_pylpg/: objects.csv  runme.ipynb  runme.py
examples/heat_demandlib/: objects.csv  runme.ipynb  runme.py
examples/heat_districtheatingsim/: objects.csv  runme.ipynb  runme.py
examples/heating(degreeday)/: objects.csv  runme.py  weather.csv
examples/hp_ruhnau/: benchmark_ruhnau.py  objects.csv  runme.ipynb  runme.py
examples/hvac_1r0c/: objects.csv  runme.ipynb  runme.py
examples/hvac_1r1c/: objects.csv  runme.ipynb  runme.py
examples/hvac_5r1c/: objects.csv  runme.ipynb  runme.py
examples/hvac_7r2c/: objects.csv  runme.ipynb  runme.py
examples/hvac_rc/: objects.csv  objects_allcols.csv  runme.ipynb  runme.py
examples/occupancy_geoma/: objects.csv  runme.ipynb  runme.py
examples/occupancy_pht/: objects.csv  runme.ipynb  runme.py
examples/pv_pvlib/: objects.csv  runme.ipynb  runme.py
examples/wind_wplib/: objects.csv  runme.ipynb  runme.py
playground/: .cache.sqlite  Forchheim_weather.csv  Forchheim_weather_short.csv  benchmark.py  benchmark_10000_buildings_8760_timesteps_v1.txt  benchmark_10000_buildings_8760_timesteps_v2.txt  benchmark_10000_buildings_8760_timesteps_v3.txt  benchmark_10000_buildings_8760_timesteps_v4.txt  benchmark_10000_buildings_8760_timesteps_v5.txt  benchmark_1000_buildings_8760_timesteps_v1.txt  benchmark_1000_buildings_8760_timesteps_v2.txt  benchmark_1000_buildings_8760_timesteps_v3.txt  benchmark_1000_buildings_8760_timesteps_v4.txt  benchmark_1000_buildings_8760_timesteps_v5.txt  benchmark_100_buildings_8760_timesteps_v1.txt  benchmark_100_buildings_8760_timesteps_v2.txt  benchmark_100_buildings_8760_timesteps_v3.txt  benchmark_100_buildings_8760_timesteps_v4.txt  benchmark_100_buildings_8760_timesteps_v5.txt  comp_njit.py  dhw_activity_adjusted.csv  dhw_consumption_timeseries.csv  dhw_consumption_timeseries_vectorized.csv  dhw_convert_to_yearly.py  dhw_energy_timeseries.csv  dhw_energy_timeseries_vectorized.csv  dhw_probabilistic_1.py  dhw_probabilistic_2.py  rc_model.py  rc_model2.py  rc_model3.py  rc_model4.py  rc_model5.py  weatherapi.py  yearly_dhw_timeseries_2019.csv
playground/Domestic Hot Water_old/: dhw_Demand.csv  dhw_Loads.csv  dhw_ProbDaytime.csv  dhw_ProbWeekday.csv
playground/for_dhw_implementation/: dhw_acticity_old.csv  dhw_total_demand.csv
src/constants/: columns.py  general.py  objects.py  ts_types.py
src/core/: __init__.py  base.py  dependency_resolver.py  registry.py  timeseries_generator.py
src/methods/: R1C1.py  __init__.py  degree_day.py  dependent_heating.py  file.py  occupancy_methods.py
src/utils/: data_handler.py  decorators.py  result_collector.py  validation.py
tests/: README.txt  conftest.py  test_version.py
tests/fixtures/: object_fixtures.py  timeseries_fixtures.py
tests/installation/: test_install.py
tests/integration/: test_end_to_end.py
tests/unit/: test_base.py  test_registry.py  test_result_collector.py  test_timeseries_generator.py  test_timeseries_method.py  test_validation.py
tests/utils/: mock_methods.py
(+213 files in other folders)
